--- a/app_papeleriaSyS/app_papeleriaSyS.csproj
+++ b/app_papeleriaSyS/app_papeleriaSyS.csproj
@@ -46,17 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bills\Model\Bill.cs" />
+    <Compile Include="Bills\Model\SaleDetail.cs" />
+    <Compile Include="Customers\Model\Customer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Provider\Model\Class1.cs" />
-    <Compile Include="User\Model\Class1.cs" />
-    <Compile Include="User\Model\Person.cs" />
+    <Compile Include="Products\Model\Category.cs" />
+    <Compile Include="Products\Model\Product.cs" />
+    <Compile Include="Providers\Model\Provider.cs" />
+    <Compile Include="Users\Controller\UserController.cs" />
+    <Compile Include="Users\Model\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Users\Model\User.cs" />
+    <Compile Include="Utillity\Encryption.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -79,5 +86,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
