--- a/app_papeleriaSyS/app_papeleriaSyS.csproj
+++ b/app_papeleriaSyS/app_papeleriaSyS.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\Model\User.cs" />
+    <Compile Include="Users\Repository\RepositoryPerson.cs" />
+    <Compile Include="Users\Repository\RepositoryUser.cs" />
     <Compile Include="Utillity\Encryption.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
